--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,8 +10,11 @@ services:
     command: python3 bot.py
   db:
     image: redis:7.2-rc-alpine
-    ports:
+    ports: 
+      - "6379:6379"
+    restart: always
     volumes:
-    env_file:
+      - redis_db:/data
 
 volumes:
+  redis_db:
